--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <ul>
         <li>
           <a href="#">
-            <img src="img/art01.png" alt="Work1">
+            <img src="https://github.com/Kdubstep/kdubstep.github.io/blob/main/img/art01.png?raw=true" alt="Work1">
             <h2>Work1</h2>
           </a>
         </li>
